<?xml version="1.0" encoding="utf-8"?>

<!--
    Permite concatenar as strings contidas aqui (entidades) com as strings definidas
    nesse xml, sem que seja necessário fazer isso por meio de código dinâmico.
 -->
<!DOCTYPE resources [
    <!ENTITY app_name "Android Esportes">
    <!ENTITY app_version "1.0.0">
]>

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">&app_name;</string>
    <string name="app_version">&app_version;</string>

    <!-- NewsActivity -->
    <string name="news_activity_title">Notícias</string>
    <string name="tx_network_state_error">Erro ao obter notícias</string>
    <string name="tx_network_state_retry">Toque para tentar novamente</string>
    <string name="cd_news_image">Imagem da notícia</string>
    <string name="cd_network_state_error_icon">Ícone de erro</string>
    <string name="cd_network_state_retry_icon">Ícone do botão: "tente novamente"</string>

    <!-- SettingsActivity -->
    <string name="settings_activity_title">Configurações</string>
    <string name="tx_about_version">Versão &app_version;</string>
    <string name="tx_about_copyright">\u00A9 2019 UpCO Ltd.</string>
    <string name="cd_about_logo">Logo do app</string>

    <!-- Strings usadas para notificar ao usuário o estado da rede -->
    <string name="tx_network_available">Rede disponível</string>
    <string name="tx_network_unavailable">Rede indisponível</string>
    <string name="tx_network_wifi_needed">
        Os dados devem ser baixados por WiFi. Tente novamente.
    </string>
    <string name="tx_network_no_connection">
        Não há nenhuma rede conectada. Tente novamente.
    </string>
    <string name="tx_network_request_error">Erro ao obter notícias</string>

    <!-- Strings usadas como actions (menu) -->
    <string name="action_settings">Configurações</string>
    <string name="action_about">Sobre</string>

    <!--
        Strings usadas para a exibição de timestamp
    -->

    <string name="tx_timestamp_year">
        <xliff:g id="interval">%1$d</xliff:g> ano atrás
    </string>

    <string name="tx_timestamp_years">
        <xliff:g id="interval">%1$d</xliff:g> anos atrás
    </string>

    <string name="tx_timestamp_month">
        <xliff:g id="interval">%1$d</xliff:g> mês atrás
    </string>

    <string name="tx_timestamp_months">
        <xliff:g id="interval">%1$d</xliff:g> meses atrás
    </string>

    <string name="tx_timestamp_day">
        <xliff:g id="interval">%1$d</xliff:g> dia atrás
    </string>

    <string name="tx_timestamp_days">
        <xliff:g id="interval">%1$d</xliff:g> dias atrás
    </string>

    <string name="tx_timestamp_hour">
        <xliff:g id="interval">%1$d</xliff:g> hora atrás
    </string>

    <string name="tx_timestamp_hours">
        <xliff:g id="interval">%1$d</xliff:g> horas atrás
    </string>

    <string name="tx_timestamp_minute">
        <xliff:g id="interval">%1$d</xliff:g> minuto atrás
    </string>

    <string name="tx_timestamp_minutes">
        <xliff:g id="interval">%1$d</xliff:g> minutos atrás
    </string>

    <string name="tx_timestamp_second">
        <xliff:g id="interval">%1$d</xliff:g> segundo atrás
    </string>

    <string name="tx_timestamp_seconds">
        <xliff:g id="interval">%1$d</xliff:g> segundos atrás
    </string>

    <string name="tx_timestamp_error">Ooops</string>

    <!-- Título das categorias de preferencias -->
    <string name="tx_data_header">Dados</string>

    <!-- Strings relacionadas às preferencias de dados -->
    <string name="tx_data_download_key">download</string>
    <string name="tx_data_download_title">Baixar dados via rede móvel</string>
    <string name="tx_data_download_summary">
        Recomendamos que desmarque essa opção se você deseja limitar o seu uso de dados.
        \nO download ocorrerá de modo padrão via conexão Wi-Fi.
    </string>

</resources>
