<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsActivity">

    <!-- Carrega o layout da AppBar e Toolbar -->
    <include layout="@layout/app_bar_settings" />

    <!-- O SettingsFragment será carregado no lugar desse FrameLayout -->
    <FrameLayout
        android:id="@+id/fl_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Apresenta informações sobre o app -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/settings_about_padding"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Logo -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/settings_about_intern_margin"
            android:contentDescription="@string/cd_about_logo"
            android:src="@drawable/logo" />

        <!-- Versão -->
        <TextView
            style="@style/TextAppearance.About"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/settings_about_intern_margin"
            android:text="@string/tx_about_version" />

        <!-- Copyright -->
        <TextView
            style="@style/TextAppearance.About"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_about_copyright" />

    </LinearLayout>
</RelativeLayout>